--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,31 +23,32 @@ environment:
 dependencies:
   flutter_localizations:
     sdk: flutter
+  intl: ^0.16.1
   flutter:
     sdk: flutter
+  cupertino_icons: ^1.0.2
 
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^0.1.3
+dependency_overrides:
+  intl: ^0.17.0-nullsafety.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  intl_translation: ^0.17.8
   flutter_cupertino_localizations: ^1.0.1
-  flutter_launcher_icons: ^0.7.5
-  shared_preferences: ^0.5.7+3
-  logger: ^0.9.1
+  flutter_launcher_icons: ^0.8.1
+  intl_translation: 0.17.10+1
+  logger: ^0.9.4
+  shared_preferences: ^0.5.12+4
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
-
 # The following section is specific to Flutter.
 flutter:
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+  generate: true
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
