--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,22 +21,21 @@ environment:
   sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
-  flutter_localizations:
-    sdk: flutter
-  intl: ^0.16.1
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
   cupertino_icons: ^1.0.2
-
-dependency_overrides:
-  intl: ^0.17.0-nullsafety.2
+  http: ^0.12.2
+  json_annotation: ^3.1.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  build_runner: ^1.10.13
+  json_serializable: ^3.5.1
   flutter_cupertino_localizations: ^1.0.1
   flutter_launcher_icons: ^0.8.1
-  intl_translation: 0.17.10+1
   logger: ^0.9.4
   shared_preferences: ^0.5.12+4
 
@@ -48,7 +47,6 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
-  generate: true
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
