--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "flutter_template",
-    "short_name": "flutter_template",
+    "name": "flutter_create",
+    "short_name": "flutter_create",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
