--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dev_dependencies:
     sdk: flutter
   build_runner: ^2.0.4
   json_serializable: ^4.1.3
+  flutter_lints: ^1.0.0
   flutter_cupertino_localizations: ^1.0.1
   flutter_launcher_icons: ^0.9.0
   logger: ^1.0.0
