--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,19 +26,20 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   cupertino_icons: ^1.0.3
-  http: ^0.13.3
-  json_annotation: ^4.0.1
+  http: ^0.13.4
+  json_annotation: ^4.3.0
+  go_router: ^2.2.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  build_runner: ^2.0.4
-  json_serializable: ^4.1.3
-  flutter_lints: ^1.0.0
+  build_runner: ^2.1.4
+  json_serializable: ^6.0.1
+  flutter_lints: ^1.0.4
   flutter_cupertino_localizations: ^1.0.1
-  flutter_launcher_icons: ^0.9.0
-  logger: ^1.0.0
-  shared_preferences: ^2.0.7
+  flutter_launcher_icons: ^0.9.2
+  logger: ^1.1.0
+  shared_preferences: ^2.0.8
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
