--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,21 +25,21 @@ dependencies:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
-  cupertino_icons: ^1.0.3
+  cupertino_icons: ^1.0.4
   http: ^0.13.4
-  json_annotation: ^4.3.0
-  go_router: ^2.2.1
+  json_annotation: ^4.4.0
+  go_router: ^3.0.4
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  build_runner: ^2.1.4
-  json_serializable: ^6.0.1
+  build_runner: ^2.1.8
+  json_serializable: ^6.1.5
   flutter_lints: ^1.0.4
   flutter_cupertino_localizations: ^1.0.1
   flutter_launcher_icons: ^0.9.2
   logger: ^1.1.0
-  shared_preferences: ^2.0.8
+  shared_preferences: ^2.0.13
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -50,9 +50,10 @@ flutter:
   # the material Icons class.
   uses-material-design: true
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/images/
+    - assets/fonts/
+    - assets/
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
   # For details regarding adding assets from package dependencies, see
