--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,34 +1,33 @@
-name: flutter_template
+name: flutter_create
 description: A new Flutter project.
 homepage: https://github.com/maheshmnj/flutter_create
 issue_tracker: https://github.com/maheshmnj/flutter_create/issues
 
 publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
-version: 0.0.1+1
+version: 1.0.0+1
 
 environment:
-  sdk: ">=2.17.0 <3.0.0"
+  sdk: ">=3.3.0 <4.0.0"
 
 dependencies:
-  cupertino_icons: ^1.0.5
+  cupertino_icons: ^1.0.8
   flutter:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
-  go_router: ^5.1.9
-  http: ^0.13.5
-  json_annotation: ^4.7.0
+  go_router: ^14.1.4
+  http: ^1.2.1
+  json_annotation: ^4.9.0
 
 dev_dependencies:
-  build_runner: ^2.3.2
-  flutter_cupertino_localizations: ^1.0.1
-  flutter_launcher_icons: ^0.11.0
-  flutter_lints: ^2.0.1
+  build_runner: ^2.4.10
+  flutter_launcher_icons: ^0.13.1
+  flutter_lints: ^4.0.0
   flutter_test:
     sdk: flutter
-  json_serializable: ^6.5.4
-  shared_preferences: ^2.0.15
+  json_serializable: ^6.8.0
+  shared_preferences: ^2.2.3
 
 flutter:
   uses-material-design: true
