--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,9 @@ dependencies:
     sdk: flutter
   go_router: ^14.1.4
   http: ^1.2.1
+  intl: ^0.19.0
   json_annotation: ^4.9.0
+  shared_preferences: ^2.2.3
 
 dev_dependencies:
   build_runner: ^2.4.10
@@ -27,7 +29,6 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   json_serializable: ^6.8.0
-  shared_preferences: ^2.2.3
 
 flutter:
   uses-material-design: true
